Added tests and related classes

--- a/src/test/java/resources/configuration.properties
+++ b/src/test/java/resources/configuration.properties
@@ -1,3 +1,5 @@
 # Endpoint configuration
 base.url=https://fakerestapi.azurewebsites.net
 base.path=/api/v1
+# Timeout configuration in milliseconds
+request.timeout=30000
