Github actions fix

--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -45,11 +45,12 @@ jobs:
         allure_results: target/allure-results
         allure_history: allure-history
         keep_reports: 5
-    
+
     - name: Deploy report to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./allure-history
+        force_orphan: true
+        keep_files: true
