--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -42,8 +42,9 @@ jobs:
     
     - name: Deploy report to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./allure-history
+        force_orphan: true
+        keep_files: true
