--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -1,4 +1,4 @@
-name: Run All Tests and Publish Allure Report
+name: Run All Tests On Push/PR
 
 on:
   push:
@@ -42,6 +42,7 @@ jobs:
     
     - name: Deploy report to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
+      if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
