--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -41,11 +41,11 @@ jobs:
         keep_reports: 5
     
     - name: Deploy report to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
       if: always()
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: ./allure-history
+        publish_dir: ./target/site/allure-maven-plugin
         force_orphan: true
         keep_files: true
