--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -52,6 +52,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: ./allure-history
+        publish_dir: ./target/site/allure-maven-plugin
         force_orphan: true
         keep_files: true
