--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -10,19 +10,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    
+
     - name: Run tests
       run: mvn clean test -fn
+      continue-on-error: true
 
     - name: Get Allure history
       uses: actions/checkout@v3
@@ -31,7 +34,7 @@ jobs:
       with:
         ref: gh-pages
         path: gh-pages
-    
+
     - name: Generate Allure Report
       uses: simple-elf/allure-report-action@master
       if: always()
@@ -39,7 +42,7 @@ jobs:
         allure_results: target/allure-results
         allure_history: allure-history
         keep_reports: 5
-    
+
     - name: Deploy report to GitHub Pages
       if: always()
       uses: peaceiris/actions-gh-pages@v3
