--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -16,20 +16,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    
+
     - name: Run tests with specific suite
       run: mvn clean test -fn -Dsuite=${{ github.event.inputs.suite }}
-      
+
     - name: Get Allure history
       uses: actions/checkout@v3
       if: always()
@@ -37,7 +39,7 @@ jobs:
       with:
         ref: gh-pages
         path: gh-pages
-    
+
     - name: Generate Allure Report
       uses: simple-elf/allure-report-action@master
       if: always()
