Github actions fix 6

--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -24,7 +24,8 @@ jobs:
         cache: maven
 
     - name: Run tests
-      run: mvn clean test -fn
+      run: |
+        mvn clean test || true
       continue-on-error: true
 
     - name: Get Allure history
@@ -36,8 +37,8 @@ jobs:
         path: gh-pages
 
     - name: Generate Allure Report
-      uses: simple-elf/allure-report-action@master
       if: always()
+      uses: simple-elf/allure-report-action@master
       with:
         allure_results: target/allure-results
         allure_history: allure-history
