--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -42,13 +42,13 @@ jobs:
         ref: gh-pages
         path: gh-pages
 
-    - name: Generate Allure Report
-      uses: simple-elf/allure-report-action@master
+    - name: Check report files
       if: always()
-      with:
-        allure_results: target/allure-results
-        allure_history: allure-history
-        keep_reports: 5
+      run: |
+        echo "Checking report directory..."
+        ls -la ./target/allure-results
+        echo "Checking for index.html..."
+        find ./target/allure-results-name "index.html"    
 
     - name: Deploy report to GitHub Pages
       if: always()
@@ -56,6 +56,6 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: ./target/site/allure-maven-plugin
+        publish_dir: ./allure-report
         force_orphan: true
         keep_files: true
