--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -36,13 +36,17 @@ jobs:
         ref: gh-pages
         path: gh-pages
 
+    - name: Install Allure CLI
+      if: always()
+      run: |
+        curl -o allure-2.24.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.1/allure-commandline-2.24.1.tgz
+        sudo tar -zxvf allure-2.24.1.tgz -C /opt/
+        sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
+
     - name: Generate Allure Report
       if: always()
-      uses: simple-elf/allure-report-action@master
-      with:
-        allure_results: target/allure-results
-        allure_history: allure-history
-        keep_reports: 5
+      run: |
+        allure generate target/allure-results --clean -o allure-report
 
     - name: Check report files
       if: always()
