Github actions fix 9

--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -52,9 +52,13 @@ jobs:
       if: always()
       run: |
         echo "Checking report directory..."
-        ls -la ./target/allure-results
+        ls -la target/allure-results
+        echo "Generating report..."
+        allure generate target/allure-results --clean -o allure-report
+        echo "Checking generated report..."
+        ls -la allure-report
         echo "Checking for index.html..."
-        find ./target/allure-results-name "index.html"    
+        find allure-report -name "index.html" || echo "No index.html found"
 
     - name: Deploy report to GitHub Pages
       if: always()
