--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -42,13 +42,36 @@ jobs:
         ref: gh-pages
         path: gh-pages
 
+    - name: Install Allure CLI
+      if: always()
+      run: |
+        curl -o allure-2.24.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.1/allure-commandline-2.24.1.tgz
+        sudo tar -zxvf allure-2.24.1.tgz -C /opt/
+        sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
+
+    - name: Generate Allure Report
+      if: always()
+      run: |
+        allure generate target/allure-results --clean -o allure-report
+
+    - name: Debug report contents before deploy
+      if: always()
+      run: |
+        echo "Final report contents:"
+        find ./allure-report
+        ls -l ./allure-report
+
     - name: Check report files
       if: always()
       run: |
         echo "Checking report directory..."
-        ls -la ./target/allure-results
+        ls -la target/allure-results
+        echo "Generating report..."
+        allure generate target/allure-results --clean -o allure-report
+        echo "Checking generated report..."
+        ls -la allure-report
         echo "Checking for index.html..."
-        find ./target/allure-results-name "index.html"    
+        find allure-report -name "index.html" || echo "No index.html found"
 
     - name: Deploy report to GitHub Pages
       if: always()
@@ -58,4 +81,3 @@ jobs:
         publish_branch: gh-pages
         publish_dir: ./allure-report
         force_orphan: true
-        keep_files: true
