--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -1,77 +1,53 @@
-name: Run All Tests On Push/PR
 
+name: Run All Tests On Push/PR
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Run tests
-      run: |
-        mvn clean test || true
-      continue-on-error: true
+      - name: Run tests
+        run: |
+          mvn clean test
+        continue-on-error: true
 
-    - name: Get Allure history
-      uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+      - name: Install Allure CLI
+        if: always()
+        run: |
+          curl -o allure-2.24.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.1/allure-commandline-2.24.1.tgz
+          sudo tar -zxvf allure-2.24.1.tgz -C /opt/
+          sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
 
-    - name: Install Allure CLI
-      if: always()
-      run: |
-        curl -o allure-2.24.1.tgz -OLs https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/2.24.1/allure-commandline-2.24.1.tgz
-        sudo tar -zxvf allure-2.24.1.tgz -C /opt/
-        sudo ln -s /opt/allure-2.24.1/bin/allure /usr/bin/allure
+      - name: Generate Allure Report
+        if: always()
+        run: |
+          allure generate target/allure-results --clean -o allure-report
 
-    - name: Generate Allure Report
-      if: always()
-      run: |
-        allure generate target/allure-results --clean -o allure-report
-
-    - name: Debug report contents before deploy
-      if: always()
-      run: |
-       echo "Final report contents:"
-       find ./allure-report
-       ls -l ./allure-report
-
-    - name: Check report files
-      if: always()
-      run: |
-        echo "Checking report directory..."
-        ls -la target/allure-results
-        echo "Generating report..."
-        allure generate target/allure-results --clean -o allure-report
-        echo "Checking generated report..."
-        ls -la allure-report
-        echo "Checking for index.html..."
-        find allure-report -name "index.html" || echo "No index.html found"
-
-    - name: Deploy report to GitHub Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: gh-pages
-        publish_dir: ./allure-report
-        force_orphan: true
+      - name: Deploy report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
+          force_orphan: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: 'Deploy Allure report to GitHub Pages'
