--- a/.github/workflows/run-specific-suite.yml
+++ b/.github/workflows/run-specific-suite.yml
@@ -31,16 +31,8 @@ jobs:
 
     - name: Run tests with specific suite
       run: |
-        mvn clean test -Dsuite=${{ github.event.inputs.suite }} || true
+        mvn clean test -Dsuite=${{ github.event.inputs.suite }}
       continue-on-error: true
-
-    - name: Get Allure history
-      uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
 
     - name: Install Allure CLI
       if: always()
@@ -54,30 +46,14 @@ jobs:
       run: |
         allure generate target/allure-results --clean -o allure-report
 
-    - name: Debug report contents before deploy
-      if: always()
-      run: |
-        echo "Final report contents:"
-        find ./allure-report
-        ls -l ./allure-report
-
-    - name: Check report files
-      if: always()
-      run: |
-        echo "Checking report directory..."
-        ls -la target/allure-results
-        echo "Generating report..."
-        allure generate target/allure-results --clean -o allure-report
-        echo "Checking generated report..."
-        ls -la allure-report
-        echo "Checking for index.html..."
-        find allure-report -name "index.html" || echo "No index.html found"
-
     - name: Deploy report to GitHub Pages
       if: always()
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: gh-pages
-        publish_dir: ./allure-report
-        force_orphan: true
+       github_token: ${{ secrets.GITHUB_TOKEN }}
+       publish_branch: gh-pages
+       publish_dir: ./allure-report
+       force_orphan: true
+       user_name: 'github-actions[bot]'
+       user_email: 'github-actions[bot]@users.noreply.github.com'
+       commit_message: 'Deploy Allure report to GitHub Pages'
